Fri Oct  7 17:34:43 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java
	  src/org/jcae/mesh/amibe/ds/Triangle.java: Fix orientation.

Mon Sep 12 11:16:23 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java
	  src/org/jcae/mesh/xmldata/MeshReader.java: Out-of-core meshes will also use the Mesh class, so Mesh.dim is replaced by a Mesh.type attribute.
	* src/org/jcae/mesh/oemm/IndexedStorage.java: Out-of-core meshes use the same Mesh class instead of OEMMMesh.
	* src/org/jcae/mesh/amibe/ds/Triangle.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: Add initial support for OEMM meshes.

Wed Aug 31 18:01:29 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/IndexedStorage.java
	  src/org/jcae/mesh/oemm/OEMMVertex.java: Convert vertex coordinates into doubles after OEMM is created.

Tue Aug 30 15:58:05 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java
	  src/org/jcae/mesh/xmldata/UNVConverter.java
	  src/org/jcae/mesh/xmldata/MeshToUNVConvert.java: New MeshToUNVConvert class to output UNV files as is done with jcae3d, ie. patch by patch.

Wed Aug 24 17:45:18 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/RawStorage.java: Remove Int10Array private class, it can be achieved with ByteBuffer.

Mon Aug 22 16:26:38 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java
	  src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java
	  src/org/jcae/mesh/xmldata/MeshToSoupConvert.java
	  src/org/jcae/mesh/xmldata/MMesh1DReader.java
	  src/org/jcae/mesh/xmldata/MMesh3DReader.java: Replace java.io by java.nio classes.

Thu Aug 11 12:35:45 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>
