@@ -1,3 +1,8 @@
+Tue Oct 25 13:31:08 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Triangle.java: Add a new linkNext member to allow creation of single linked lists of Triangle.
+	* src/org/jcae/mesh/amibe/ds/Vertex.java (getSurroundingOTriangle): Outer triangles have been removed from the mesh, which is thus no more convex.  The previous algorithm to check for an OTriangle containing the desired vertex may fail.
+
 Fri Oct  7 17:34:43 CEST 2005 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java
